<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/image_background"
        android:layout_marginTop="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivArticleImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_180"
            android:scaleType="fitXY"
            android:src="@drawable/tiger" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvArticleTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvImage" />

    <TextView
        android:id="@+id/tvArticleContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/content"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toBottomOf="@id/tvArticleTitle" />

    <TextView
        android:id="@+id/tvArticleDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/date"
        android:textSize="@dimen/sp_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvArticleContent" />

    <Button
        android:id="@+id/btnRead"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_margin="@dimen/dp_30"
        android:background="@drawable/button_background"
        android:text="@string/read"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvArticleDate" />

    <Button
        android:id="@+id/btnSave"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_margin="@dimen/dp_30"
        android:background="@drawable/button_background"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnRead"
        app:layout_constraintTop_toBottomOf="@id/tvArticleDate" />

</androidx.constraintlayout.widget.ConstraintLayout>