<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_10">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivArticleImage"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:scaleType="fitXY"
            android:src="@drawable/tiger" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvSourceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/source_name"
        android:textColor="@color/button_color"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toTopOf="@id/tvTitle"
        app:layout_constraintStart_toEndOf="@id/cvImage"
        app:layout_constraintTop_toTopOf="@id/cvImage" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cvImage"
        app:layout_constraintTop_toBottomOf="@id/tvSourceName" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="@id/cvImage"
        app:layout_constraintStart_toEndOf="@id/cvImage"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvAuthorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/author_name"
        android:maxLength="15"
        app:layout_constraintBottom_toBottomOf="@id/cvImage"
        app:layout_constraintStart_toEndOf="@id/tvDate"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>